erDiagram
    USERS {
        bigint id PK
        string email UK
        string phone UK
        string password_hash
        string provider
        string google_provider_id UK
        string account_status
        string kyc_status
        string trust_level
        boolean email_verified
        boolean enabled
        boolean account_non_locked
    }

    USER_PROFILES {
        bigint user_id PK,FK
        string full_name
        string gender
        date date_of_birth
        string avatar_url
        string occupation
        string company_name
    }

    ROLES {
        bigint id PK
        string code UK
        string description
    }

    PERMISSIONS {
        bigint id PK
        string name UK
        string description
    }

    USER_ROLES {
        bigint user_id FK
        bigint role_id FK
    }

    ROLE_PERMISSIONS {
        bigint role_id FK
        bigint permission_id FK
    }

    REFRESH_TOKENS {
        bigint id PK
        bigint user_id FK
        string token UK
        datetime expires_at
        boolean revoked
    }

    ACCOUNT_ACTIVATION_TOKENS {
        bigint id PK
        bigint user_id FK
        string token UK
        datetime expires_at
        boolean used
    }

    PASSWORD_RESET_TOKENS {
        bigint id PK
        bigint user_id FK
        string otp_code
        datetime expires_at
        boolean used
    }

    SHIPPING_ADDRESSES {
        bigint id PK
        bigint user_id FK
        string receiver_name
        string receiver_phone
        string full_address
        string province
        boolean is_default
    }

    USERS ||--|| USER_PROFILES : "has"
    USERS ||--o{ SHIPPING_ADDRESSES : "has"
    USERS ||--o{ REFRESH_TOKENS : "owns"
    USERS ||--o{ ACCOUNT_ACTIVATION_TOKENS : "activates"
    USERS ||--o{ PASSWORD_RESET_TOKENS : "resets"

    USERS ||--o{ USER_ROLES : "assigned"
    ROLES ||--o{ USER_ROLES : "contains"

    ROLES ||--o{ ROLE_PERMISSIONS : "grants"
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : "included"